[tool.poetry]
name = "graphtester"
version = "0.1.0"
description = "WL-testing labeling/linking methods with a wide array of graph classes"
authors = ["Graphtester authors"]
license = "MIT"
packages = [
    {include = "graphtester"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
igraph = "^0.9.10"
networkx = "3.1"
requests = "^2.27.1"
pandas = "^1.4.2"
Jinja2 = "^3.1.1"
lxml = "^4.8.0"
beautifulsoup4 = "^4.11.1"
dgl = "^0.9.1"
ogb = "^1.3.5"
rdflib = "^6.2.0"

[tool.poetry.group.dev.dependencies]
torch = "^1.13.1"
pre-commit = "^2.17.0"
pytest = "^7.1.0"
coverage = "^6.3.2"
flake8 = "^4.0.1"
black = "^22.1.0"
ipykernel = "^6.9.1"
isort = "^5.10.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
openpyxl = "^3.1.2"


[tool.poetry.group.pyg.dependencies]
torch-geometric = "^2.3.1"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.toml
  | \.venv
  | \.venv
  | \.bzr
  | \.direnv
  | \.eggs
  | \.nox
  | \.svn
  | __pypackages__
  | node_modules
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 88
skip = [
  '.bzr', '.direnv', '.eggs', '.git', '.hg',
  '.mypy_cache', '.nox', '.svn', '.tox', '.venv',
  '__pypackages__', '_build', 'buck-out', 'build',
  'dist', 'node_modules', 'venv'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
